# wzrd_Service_Backend

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  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
bip/: Cargo.toml  main.rs
bip/src/: main.rs
btc_address_validate/: Cargo.toml
btc_address_validate/src/: main.rs
src/wzrd_btc_service/: Cargo.toml
src/wzrd_btc_service/src/: lib.rs
src/wzrd_chat_service/: Cargo.toml  wzrd_chat_service.did
src/wzrd_chat_service/src/: chat_utils.rs  lib.rs
src/wzrd_icp_backend/: Cargo.toml  wzrd_icp_backend.did
src/wzrd_icp_backend/src/: chatUtils.rs  chat_utils.rs  idUtils.rs  id_utils.rs  lib.rs  utils.rs
src/wzrd_id_service/: Cargo.toml  wzrd_id_service.did
src/wzrd_id_service/src/: id_utils.rs  lib.rs
src/wzrd_wallet_service/: Cargo.toml  wzrd_wallet_service.did
src/wzrd_wallet_service/src/: btc_types.rs  btc_utils.rs  ecdsa_api.rs  eth_utils.rs  evm_utils.rs  icp_utils.rs  lib.rs  wm_utils.rs
